--- a/package.json
+++ b/package.json
@@ -2,12 +2,17 @@
   "name": "test-scope-app",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.4.16",
     "@babel/preset-react": "^7.14.5",
     "@rails/webpacker": "5.4.3",
+    "@shopify/app-bridge-utils": "1.26.0",
+    "@shopify/polaris": "^7.0.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "graphql": "^15.6.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react_ujs": "^2.6.1",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
